patching hotspot tests